inventory as map; delete item implementation and test
