# api/openapi.yaml
@@ -17,6 +17,10 @@ paths:
                 $ref: '#/components/schemas/Items'
         '500':
           description: An unexpected server error occurred.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /item:
     post:
       description: Adds the specified item to inventory.
@@ -34,23 +38,69 @@ paths:
                 $ref: '#/components/schemas/Item'
         '400':
           description: The given data was invalid.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         '500':
           description: An unexpected server error occurred.
-  
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /item/{id}:
+    delete:
+      description: Deletes an item from the inventory.
+      parameters:
+        - name: id
+          in: path
+          description: The ID of the item to delete.
+          required: true
+          schema:
+            example: 1
+            type: uint
+      responses:
+        '204':
+          description: The item was deleted successfully.
+        '400':
+          description: The given id is not an unsigned int.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: The given id was not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: An unexpected server error occurred.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 components:
   schemas:
     Items:
-      type: array
-      items:
+      type: object
+      additionalProperties:
         $ref: '#/components/schemas/Item'
+      example:
+        1:
+          name: 'Table'
+          quantity: 10
+          price: 119.99
+        2:
+          name: 'Chair'
+          quantity: 5
+          price: 29.99
+
     Item:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
-          example: 1
-          description: The unique identifier of the inventory item.
         name:
           type: string
           example: 'Table'
@@ -67,21 +117,9 @@ components:
           example: 119.99
           description: The monetary value of the inventory item in euro.
 
-    ItemCreate:
+    Error:
       type: object
       properties:
-        name:
+        error:
           type: string
-          example: 'Chair'
-          description:
-            The name of the inventory item to create.
-        quantity:
-          type: integer
-          format: int64
-          example: 3
-          description: The current quantity of the inventory item to create.
-        price:
-          type: number
-          format: double
-          example: 29.99
-          description: The monetary value of the inventory item to create in euro.
+          example: 'Error message.'
