# internal/api/router.go
@@ -2,6 +2,7 @@ package api
 
 import (
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -10,6 +11,7 @@ func SetupRoutes() *gin.Engine {
 	router := gin.Default()
 	router.GET("/items", getItems)
 	router.POST("/item", createItem)
+	router.DELETE("/item/:id", deleteItem)
 	return router
 }
 
@@ -24,17 +26,38 @@ func createItem(c *gin.Context) {
 
 	err := c.BindJSON(&item)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusBadRequest, NewError(err.Error()))
 		return
 	}
 	isInvalid := item.Name == "" || item.Price == 0 || item.Quantity == 0
 	if isInvalid {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Missing item data"})
+		c.JSON(http.StatusBadRequest, NewError("Missing item data"))
 		return
 	}
 
-	item.ID = uint(len(Items)) + 1 //TODO: calculate real max value
-	Items = append(Items, item)
+	Items[uint(len(Items))+1] = item
 
 	c.JSON(http.StatusCreated, item)
+}
+
+// deleteItem deletes an item from the inventory.
+func deleteItem(c *gin.Context) {
+	id, err := strconv.ParseUint(c.Param("id"), 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, NewError("Invalid item ID."))
+		return
+	}
+	_, exists := Items[uint(id)]
+	if !exists {
+		c.JSON(http.StatusNotFound, NewError("Item ID does not exist."))
+		return
+	}
+
+	delete(Items, uint(id))
+
+	c.JSON(http.StatusNoContent, nil)
+}
+
+func NewError(message string) map[string]string {
+	return map[string]string{"error": message}
 }
